--- a/style.css
+++ b/style.css
@@ -1,7 +1,10 @@
 body{color: white;background-color: black;margin:0px;} 
 header{border: solid 2px rgb(red, green, blue);}
-header{border-bottom: solid 2px rgb(42,122,228);padding: 20px;
-}
+
+
 
 section{blackground:rgb(184,156,213);padding-bottom: 80px;
-padding-top: 80px;}
+padding-top: 80px;
+display:flex;
+justify-content:center;}
+
