--- a/style.css
+++ b/style.css
@@ -3,7 +3,9 @@ header{border: solid 2px rgb(red, green, blue);}
 
 
 
-section{blackground:rgb(184,156,213);padding-bottom: 80px;
+section{
+    blackground:rgb(184,156,213);
+    padding-bottom: 80px;
 padding-top: 80px;
 display:flex;
 justify-content:center;}
