--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ header{border: solid 2px rgb(red, green, blue);}
 
 
 section{
-    blackground:rgb(184,156,213);
+    background:rgb(184,156,213);
     padding-bottom: 80px;
 padding-top: 80px;
 display:flex;
