--- a/style.css
+++ b/style.css
@@ -14,6 +14,10 @@ div{margin-right: 20px;}
 
 .chamada-texto{margin-right: 5%;}
 img{height: 200px;}
-
+.categoria-videos{
+    display: flex;
+    overflow-x: auto;
+    gap:10px ;
+}
 
 
